--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap");
 
-:root {
-  font: "Poppins", sans-serif;
+body {
+  font-family: "Poppins", sans-serif;
 }
 
 *,
@@ -11,28 +11,29 @@
   padding: 0;
   box-sizing: border-box;
 }
- main {
+
+main {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  padding: 1%;  
+  padding: 1%;
   margin: 1%;
 }
-
 
 .moviecards-container {
   display: flex;
   flex-wrap: wrap;
   column-gap: 1%;
   justify-content: center;
-    }
-    .imageTextContainer {
-      display: flex;
-      flex-direction: column;
-    } 
+}
 
-    @media only screen and (max-width: 600px) {
-      body {
-        background-color: lightblue;
-      }
-    }
+.imageTextContainer {
+  display: flex;
+  flex-direction: column;
+}
+
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: lightblue;
+  }
+}
