--- a/src/style.css
+++ b/src/style.css
@@ -70,6 +70,7 @@ main {
   flex-direction: column;
 }
 
+/* POPUP STYLES */
 .popup-container {
   background: #fff;
   position: fixed;
@@ -82,6 +83,36 @@ main {
   margin: 0 20px 40px 0;
   padding: 16px;
   height: 90vh;
+}
+
+.comment-section h2 {
+  color: white;
+  text-align: center;
+  font-size: 20px;
+  padding-bottom: 10px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.submitBtn {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  text-align: center;
+  cursor: pointer;
+  box-shadow: 3px 3px 8px 1px rgb(0 0 0 / 35%);
+}
+
+.user,
+.comment {
+  padding: 5px;
+  border-radius: 8px;
 }
 
 @media only screen and (max-width: 600px) {
