--- a/src/style.css
+++ b/src/style.css
@@ -161,6 +161,20 @@ main {
   box-shadow: 3px 3px 8px 1px rgb(0 0 0 / 35%);
 }
 
+footer {
+  position: fixed;
+  width: 100%;
+  height: 50px;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(17 134 36 / 60%);
+  color: white;
+  margin-bottom: 0;
+}
+
+
 @media only screen and (max-width: 600px) {
   body {
     background-color: lightblue;
