--- a/src/style.css
+++ b/src/style.css
@@ -17,9 +17,10 @@ header {
   display: flex;
   background-color: crimson;
   position: fixed;
+  justify-content: space-evenly;
   width: 100%;
   top: 0;
-  padding: 0 27% 0 38px;
+  padding-right:41%;
 }
 
 .header-content {
@@ -27,13 +28,14 @@ header {
   justify-content: space-between;
   background-color: crimson;
   color: cornsilk;
-  padding: 1% 0 1% 8%;
-  gap: 100%;
+  align-items: center;
+  margin-top: 1%;
+  gap: 50%;
 }
 
 .logo {
   width: 80px;
-  height: 100%;
+  height: 53%;
 }
 
 .movieTitle {
@@ -172,6 +174,10 @@ footer {
   background-color: rgb(17 134 36 / 60%);
   color: white;
   margin-bottom: 0;
+}
+
+.movie-count {
+  display: flex;
 }
 
 
