Add updateComments function

--- a/src/style.css
+++ b/src/style.css
@@ -48,9 +48,28 @@ header {
 
 ul {
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
   gap: 80%;
+}
+
+.movieName h3,
+.movieName p {
+  display: flex;
+  justify-content: center;
+}
+
+.movieName p {
+  cursor: pointer;
+}
+
+.commentBtn {
+  padding: 10px;
+  margin: 5% 34%;
+  border: none;
+  border-radius: 5px;
+  text-align: center;
+  cursor: pointer;
+  box-shadow: 3px 3px 8px 1px rgb(0 0 0 / 35%);
+  justify-items: center;
 }
 
 main {
@@ -76,7 +95,7 @@ main {
   position: fixed;
   opacity: 2;
   top: 5%;
-  left: 2.5%;
+  left: 12.5%;
   overflow-y: hidden;
   border: 1px solid #dfe1e6;
   border-radius: 16px;
@@ -84,12 +103,14 @@ main {
   padding: 16px;
   height: 90vh;
   display: flex;
+  width: 75%;
 }
 
 .fa-times {
   position: fixed;
-  left: 95%;
+  left: 85%;
   font-size: 200%;
+  cursor: pointer;
 }
 
 .popup-headTitle {
@@ -127,19 +148,14 @@ main {
   align-items: center;
 }
 
-.user,
-.comment {
-  padding: 5px;
-  border-radius: 8px;
-}
-
-.comment {
-  padding: 20px;
-}
-
 .comment-ul {
   flex-direction: column;
   list-style: none;
+}
+
+.userInput {
+  padding: 0 !important;
+  margin: 0 !important;
 }
 
 .comment-ul li {
@@ -148,6 +164,17 @@ main {
   border-radius: 8px;
   margin-top: 20px;
   color: white;
+}
+
+
+.user,
+.comment {
+  padding: 5px;
+  border-radius: 8px;
+}
+
+.comment {
+  padding: 20px;
 }
 
 .submitBtn {
