add color to likes

--- a/src/style.css
+++ b/src/style.css
@@ -65,6 +65,10 @@ main {
   justify-content: center;
 }
 
+.fas {
+  color: red;
+}
+
 .imageTextContainer {
   display: flex;
   flex-direction: column;
